Add WASM client support + SSR + PersistentComponentState

--- a/BlazorCalendar.Application/BlazorCalendar.Application.csproj
+++ b/BlazorCalendar.Application/BlazorCalendar.Application.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorCalendar.Domain\BlazorCalendar.Domain.csproj" />
+    <ProjectReference Include="..\BlazorCalendar.Shared\BlazorCalendar.Shared.csproj" />
   </ItemGroup>
 
 </Project>
